--- a/Src/Sample/Sample.CommandService/Web.config
+++ b/Src/Sample/Sample.CommandService/Web.config
@@ -13,6 +13,7 @@
   </configSections>
   <frameworkConfiguration>
     <handlers>
+      <handler name="ApplicationEventSubscriber" sourceType="Assembly" source="Sample.ApplicationEventSubscriber" />
       <handler name="DomainEventSubscriber" sourceType="Assembly" source="Sample.DomainEventSubscriber" />
       <handler name="AsyncDomainEventSubscriber" sourceType="Assembly" source="Sample.AsyncDomainEventSubscriber" />
       <handler name="CommandHandlers" sourceType="Assembly" source="Sample.CommandHandler" />
@@ -32,7 +33,7 @@
     <alias alias="perexecutioncontext" type="IFramework.Infrastructure.Unity.LifetimeManagers.PerExecutionContextLifetimeManager, IFramework" />
     <alias alias="permessagecontext" type="IFramework.Infrastructure.Unity.LifetimeManagers.PerMessageContextLifetimeManager, IFramework" />
     <alias alias="IMessageConsumer" type="IFramework.Message.IMessageConsumer, IFramework" />
-    <alias alias="DomainEventSubscriber" type="IFramework.MessageQueue.ZeroMQ.DomainEventSubscriber, IFramework.MessageQueue.ZeroMQ" />
+    <alias alias="EventSubscriber" type="IFramework.MessageQueue.ZeroMQ.EventSubscriber, IFramework.MessageQueue.ZeroMQ" />
     <alias alias="IEventPublisher" type="IFramework.Event.IEventPublisher, IFramework" />
     <alias alias="EventPublisher" type="IFramework.MessageQueue.ZeroMQ.EventPublisher, IFramework.MessageQueue.ZeroMQ" />
     <alias alias="ILinearCommandManager" type="IFramework.Command.ILinearCommandManager, IFramework" />
@@ -102,7 +103,7 @@
           </param>
         </constructor>
       </register>
-      <register name="AsyncDomainEventSubscriber" type="IHandlerProvider" mapTo="EventSubscriberProvider">
+      <register name="AsyncDomainEventProvider" type="IHandlerProvider" mapTo="EventSubscriberProvider">
         <lifetime type="singleton" />
         <constructor>
           <param name="assemblies">
@@ -112,10 +113,31 @@
           </param>
         </constructor>
       </register>
-      <register name="DomainEventConsumer" type="IMessageConsumer" mapTo="DomainEventSubscriber">
+      <register name="DomainEventConsumer" type="IMessageConsumer" mapTo="EventSubscriber">
         <lifetime type="singleton" />
         <constructor>
-          <param dependencyName="AsyncDomainEventSubscriber" name="handlerProvider" />
+          <param dependencyName="AsyncDomainEventProvider" name="handlerProvider" />
+          <param name="subEndPoints">
+            <array>
+              <value value="tcp://127.0.0.1:5006" />
+            </array>
+          </param>
+        </constructor>
+      </register>  
+      <register name="ApplicationEventProvider" type="IHandlerProvider" mapTo="EventSubscriberProvider">
+        <lifetime type="singleton" />
+        <constructor>
+          <param name="assemblies">
+            <array>
+              <value value="ApplicationEventSubscriber" />
+            </array>
+          </param>
+        </constructor>
+      </register>
+      <register name="ApplicationEventConsumer" type="IMessageConsumer" mapTo="EventSubscriber">
+        <lifetime type="singleton" />
+        <constructor>
+          <param dependencyName="ApplicationEventProvider" name="handlerProvider" />
           <param name="subEndPoints">
             <array>
               <value value="tcp://127.0.0.1:5006" />
