--- a/Src/Sample.ApplicationEvent/Sample.ApplicationEvent.csproj
+++ b/Src/Sample.ApplicationEvent/Sample.ApplicationEvent.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{1E6D9A9A-AB62-4450-B589-2F434462DFE9}</ProjectGuid>
+    <ProjectGuid>{7C17F97F-3515-4A1B-AEAD-01689D087DE0}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Sample.Command</RootNamespace>
-    <AssemblyName>Sample.Command</AssemblyName>
+    <RootNamespace>Sample.ApplicationEvent</RootNamespace>
+    <AssemblyName>Sample.ApplicationEvent</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -39,21 +39,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="CommandBase.cs" />
-    <Compile Include="Community\Login.cs" />
-    <Compile Include="Community\Register.cs" />
-    <Compile Include="LinearCommandManager.cs" />
+    <Compile Include="AccountLogined.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="SysException.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\iFramework\IFramework.csproj">
+    <ProjectReference Include="..\iFramework\IFramework.csproj">
       <Project>{f3932367-d3ea-4e8a-ab12-5fb785b93a39}</Project>
       <Name>IFramework</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\Sample.DTO\Sample.DTO.csproj">
-      <Project>{279b5ee0-22ca-4672-be92-9b6658dcdae3}</Project>
-      <Name>Sample.DTO</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
