--- a/Src/iFramework.Plugins/iFramework.MessageQueue.ZeroMQ/IFramework.MessageQueue.ZeroMQ.csproj
+++ b/Src/iFramework.Plugins/iFramework.MessageQueue.ZeroMQ/IFramework.MessageQueue.ZeroMQ.csproj
@@ -58,7 +58,7 @@
     <Compile Include="EventPublisher.cs" />
     <Compile Include="IInProcMessageConsumer.cs" />
     <Compile Include="MessageConsumer.cs" />
-    <Compile Include="DomainEventSubscriber.cs" />
+    <Compile Include="EventSubscriber.cs" />
     <Compile Include="MessageFrame.cs" />
     <Compile Include="MessageQueueImpl.cs">
       <SubType>Code</SubType>
