--- a/Src/iFramework.Plugins/iFramework.Infrastructure.Mvc/IFramework.Infrastructure.Mvc.csproj
+++ b/Src/iFramework.Plugins/iFramework.Infrastructure.Mvc/IFramework.Infrastructure.Mvc.csproj
@@ -66,6 +66,7 @@
     <Compile Include="Config\MvcConfigurationSection.cs" />
     <Compile Include="Config\MvcControllerCollection.cs" />
     <Compile Include="Config\MvcControllerElement.cs" />
+    <Compile Include="IoCControllerFactory.cs" />
     <Compile Include="MultipartMediaTypeFormatter.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UnityDependencyResolver.cs" />
