--- a/Src/Sample/Sample.CommandHandler/Sample.CommandHandler.csproj
+++ b/Src/Sample/Sample.CommandHandler/Sample.CommandHandler.csproj
@@ -58,6 +58,10 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\..\iFramework.Plugins\iFramework.Infrastructure.EntityFramework\IFramework.EntityFramework.csproj">
+      <Project>{c00b8ad6-47c2-4642-877e-2c759d05dcfe}</Project>
+      <Name>IFramework.EntityFramework</Name>
+    </ProjectReference>
     <ProjectReference Include="..\..\iFramework\IFramework.csproj">
       <Project>{f3932367-d3ea-4e8a-ab12-5fb785b93a39}</Project>
       <Name>IFramework</Name>
@@ -77,6 +81,10 @@
     <ProjectReference Include="..\Sample.DTO\Sample.DTO.csproj">
       <Project>{279b5ee0-22ca-4672-be92-9b6658dcdae3}</Project>
       <Name>Sample.DTO</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Sample.Persistence\Sample.Persistence.csproj">
+      <Project>{07b18368-3d3f-4c12-b2f1-e38fc709226a}</Project>
+      <Name>Sample.Persistence</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
