--- a/Src/Sample/Sample.CommandService/Web.config
+++ b/Src/Sample/Sample.CommandService/Web.config
@@ -54,7 +54,7 @@
     <alias alias="DomainEventBus" type="IFramework.Event.Impl.DomainEventBus, IFramework" />
     <alias alias="IMessageStore" type="IFramework.Message.IMessageStore, IFramework" />
     <alias alias="MessageStore" type="IFramework.EntityFramework.MessageStore, IFramework.EntityFramework" />
-    <alias alias="DbContextImpl" type="Sample.Persistence.SampleModelContext, Sample.Persistence" />
+    <alias alias="SampleModelContext" type="Sample.Persistence.SampleModelContext, Sample.Persistence" />
     <alias alias="RepositoryImpl" type="IFramework.EntityFramework.Repositories.Repository`1,  IFramework.EntityFramework" />
     <container>
       <register type="IMessageStore" mapTo="MessageStore">
@@ -160,7 +160,7 @@
       </register>
       <register type="IFramework.Repositories.IDomainRepository, IFramework" mapTo="IFramework.EntityFramework.Repositories.DomainRepository, IFramework.EntityFramework" />
       <register type="IFramework.Repositories.IRepository`1, IFramework" mapTo="RepositoryImpl" />
-      <register name="DomainModelContext" type="System.Data.Entity.DbContext,EntityFramework" mapTo="DbContextImpl">
+      <register type="SampleModelContext" mapTo="SampleModelContext">
         <lifetime type="permessagecontext" />
       </register>
     </container>
