add ef addwithsavechanges feature to get self-increasing identity

--- a/Src/iFramework.Plugins/iFramework.Infrastructure.EntityFramework/IFramework.EntityFramework.csproj
+++ b/Src/iFramework.Plugins/iFramework.Infrastructure.EntityFramework/IFramework.EntityFramework.csproj
@@ -73,6 +73,7 @@
     <Compile Include="Repositories\DomainRepository.cs" />
     <Compile Include="Repositories\IMergeOptionChangable.cs" />
     <Compile Include="Repositories\Repository.cs" />
+    <Compile Include="Repositories\RepositoryExtention.cs" />
     <Compile Include="UnitOfWork\MockUnitOfWork.cs" />
     <Compile Include="UnitOfWork\UnitOfWork.cs" />
   </ItemGroup>
