--- a/Src/iFramework.Plugins/iFramework.Infrastructure.EntityFramework/IFramework.EntityFramework.csproj
+++ b/Src/iFramework.Plugins/iFramework.Infrastructure.EntityFramework/IFramework.EntityFramework.csproj
@@ -54,6 +54,7 @@
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.configuration" />
     <Reference Include="System.Core" />
+    <Reference Include="System.ServiceModel" />
     <Reference Include="System.Transactions" />
     <Reference Include="System.Web" />
     <Reference Include="System.Xml.Linq" />
