--- a/Src/Sample/Sample.DomainEventHandler/Sample.DomainEventSubscriber.csproj
+++ b/Src/Sample/Sample.DomainEventHandler/Sample.DomainEventSubscriber.csproj
@@ -53,13 +53,17 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\..\iFramework.Plugins\iFramework.Infrastructure.EntityFramework\IFramework.EntityFramework.csproj">
+      <Project>{c00b8ad6-47c2-4642-877e-2c759d05dcfe}</Project>
+      <Name>IFramework.EntityFramework</Name>
+    </ProjectReference>
     <ProjectReference Include="..\..\iFramework\IFramework.csproj">
       <Project>{f3932367-d3ea-4e8a-ab12-5fb785b93a39}</Project>
       <Name>IFramework</Name>
     </ProjectReference>
-    <ProjectReference Include="..\Sample.DomainEvent\Sample.DomainEvent.csproj">
+    <ProjectReference Include="..\Sample.DomainEvent\Sample.DomainEvents.csproj">
       <Project>{af5512aa-caf1-4066-90bd-efb9b951fe18}</Project>
-      <Name>Sample.DomainEvent</Name>
+      <Name>Sample.DomainEvents</Name>
     </ProjectReference>
     <ProjectReference Include="..\Sample.Domain\Sample.Domain.csproj">
       <Project>{f1f1b380-f3a0-463e-8686-3af27962c100}</Project>
