Add timestampedAggregateRoot support

--- a/Src/iFramework.Plugins/iFramework.Infrastructure.EntityFramework/IFramework.EntityFramework.csproj
+++ b/Src/iFramework.Plugins/iFramework.Infrastructure.EntityFramework/IFramework.EntityFramework.csproj
@@ -77,6 +77,7 @@
     <Compile Include="Repositories\IMergeOptionChangable.cs" />
     <Compile Include="Repositories\Repository.cs" />
     <Compile Include="Repositories\RepositoryExtention.cs" />
+    <Compile Include="TimestampedAggregateRoot.cs" />
     <Compile Include="UnitOfWork\MockUnitOfWork.cs" />
     <Compile Include="UnitOfWork\UnitOfWork.cs" />
     <Compile Include="VersionedAggregateRoot.cs" />
