--- a/Src/iFramework.Plugins/IFramework.MessageQueue.MessageFormat/IFramework.MessageQueue.MessageFormat.csproj
+++ b/Src/iFramework.Plugins/IFramework.MessageQueue.MessageFormat/IFramework.MessageQueue.MessageFormat.csproj
@@ -32,6 +32,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Microsoft.ServiceBus">
+      <HintPath>..\..\packages\ServiceBus.v1_1.1.0.3.0\lib\net40-full\Microsoft.ServiceBus.dll</HintPath>
+    </Reference>
     <Reference Include="Newtonsoft.Json, Version=6.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\packages\Newtonsoft.Json.6.0.2\lib\net40\Newtonsoft.Json.dll</HintPath>
@@ -46,7 +49,6 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="MessageContext.cs" />
-    <Compile Include="MessageHandledNotification.cs" />
     <Compile Include="MessageReply.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
