--- a/Src/iFramework.Plugins/IFramework.MessageQueue.MessageFormat/packages.config
+++ b/Src/iFramework.Plugins/IFramework.MessageQueue.MessageFormat/packages.config
@@ -1,4 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Newtonsoft.Json" version="6.0.2" targetFramework="net40" />
+  <package id="ServiceBus.v1_1" version="1.0.3.0" targetFramework="net40" />
 </packages>
