--- a/Src/Sample.ApplicationEvent/Sample.ApplicationEvent.csproj
+++ b/Src/Sample.ApplicationEvent/Sample.ApplicationEvent.csproj
@@ -40,6 +40,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AccountLogined.cs" />
+    <Compile Include="ApplicationEvent.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
