--- a/Src/iFramework.Plugins/iFramework.Infrastructure.EntityFramework/packages.config
+++ b/Src/iFramework.Plugins/iFramework.Infrastructure.EntityFramework/packages.config
@@ -2,4 +2,5 @@
 <packages>
   <package id="EntityFramework" version="6.0.2" targetFramework="net40" />
   <package id="Unity" version="2.1.505.2" targetFramework="net40" />
+  <package id="ServiceBus.v1_1" version="1.0.3.0" targetFramework="net40" />
 </packages>
