--- a/Src/Sample/Sample.CommandService/Web.config
+++ b/Src/Sample/Sample.CommandService/Web.config
@@ -51,9 +51,9 @@
     <alias alias="IUnitOfWork" type="IFramework.UnitOfWork.IUnitOfWork, IFramework" />
     <alias alias="UnitOfWork" type="IFramework.EntityFramework.UnitOfWork, IFramework.EntityFramework" />
     <alias alias="IDomainEventBus" type="IFramework.Event.IDomainEventBus, IFramework" />
-    <alias alias="DomainEventBus" type="IFramework.Event.Impl.MockDomainEventBus, IFramework" />
+    <alias alias="DomainEventBus" type="IFramework.Event.Impl.DomainEventBus, IFramework" />
     <alias alias="IMessageStore" type="IFramework.Message.IMessageStore, IFramework" />
-    <alias alias="MessageStore" type="IFramework.EntityFramework.MessageStore, IFramework.EntityFramework" />
+    <alias alias="MessageStore" type="IFramework.EntityFramework.MessageStoring.MessageStore, IFramework.EntityFramework" />
     <alias alias="SampleModelContext" type="Sample.Persistence.SampleModelContext, Sample.Persistence" />
     <alias alias="RepositoryImpl" type="IFramework.EntityFramework.Repositories.Repository`1,  IFramework.EntityFramework" />
     <container>
@@ -93,7 +93,7 @@
       <register type="ICommandHandlerProvider" mapTo="CommandHandlerProvider">
         <lifetime type="singleton" />
       </register>
-      <!--<register type="IEventSubscriberProvider" mapTo="EventSubscriberProvider">
+      <register type="IEventSubscriberProvider" mapTo="EventSubscriberProvider">
         <lifetime type="singleton" />
         <constructor>
           <param name="assemblies">
@@ -113,7 +113,7 @@
           </param>
         </constructor>
       </register>
-      <register name="DomainEventConsumer" type="IMessageConsumer" mapTo="EventSubscriber">
+     <!-- <register name="DomainEventConsumer" type="IMessageConsumer" mapTo="EventSubscriber">
         <lifetime type="singleton" />
         <constructor>
           <param dependencyName="AsyncDomainEventProvider" name="handlerProvider" />
@@ -153,10 +153,10 @@
       </register>
       <register type="IDomainEventBus" mapTo="DomainEventBus">
         <lifetime type="permessagecontext" />
-        <!--<constructor>
+        <constructor>
           <param name="provider" dependencyType="IEventSubscriberProvider" />
           <param name="eventPublisher" dependencyType="IEventPublisher" />
-        </constructor>-->
+        </constructor>
       </register>
       <register type="IFramework.Repositories.IDomainRepository, IFramework" mapTo="IFramework.EntityFramework.Repositories.DomainRepository, IFramework.EntityFramework" />
       <register type="IFramework.Repositories.IRepository`1, IFramework" mapTo="RepositoryImpl" />
