--- a/Src/iFramework.Plugins/iFramework.Infrastructure.EntityFramework/IFramework.EntityFramework.csproj
+++ b/Src/iFramework.Plugins/iFramework.Infrastructure.EntityFramework/IFramework.EntityFramework.csproj
@@ -72,9 +72,13 @@
     <Compile Include="EntityExtension.cs" />
     <Compile Include="MessageStoring\Command.cs" />
     <Compile Include="MessageStoring\HandledEvent.cs" />
+    <Compile Include="MessageStoring\UnSentMessage.cs" />
     <Compile Include="MessageStoring\Message.cs" />
-    <Compile Include="MessageStoring\DomainEvent.cs" />
+    <Compile Include="MessageStoring\Event.cs" />
     <Compile Include="MessageStoring\MessageStore.cs" />
+    <Compile Include="MessageStoring\Status.cs" />
+    <Compile Include="MessageStoring\UnPublishedEvent.cs" />
+    <Compile Include="MessageStoring\UnSentCommand.cs" />
     <Compile Include="MSDbContext.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repositories\DomainRepository.cs" />
