--- a/Src/iFramework.Plugins/IFramework.MessageQueue.ServiceBus/IFramework.MessageQueue.ServiceBus.csproj
+++ b/Src/iFramework.Plugins/IFramework.MessageQueue.ServiceBus/IFramework.MessageQueue.ServiceBus.csproj
@@ -54,6 +54,7 @@
   <ItemGroup>
     <Compile Include="CommandBus.cs" />
     <Compile Include="CommandConsumer.cs" />
+    <Compile Include="EventSubscriber.cs" />
     <Compile Include="MessageProcessor.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
