add eventsubscriber & eventpublisher

--- a/Src/Sample/Sample.CommandService/Web.config
+++ b/Src/Sample/Sample.CommandService/Web.config
@@ -35,7 +35,7 @@
     <alias alias="IMessageConsumer" type="IFramework.Message.IMessageConsumer, IFramework" />
     <!--<alias alias="EventSubscriber" type="IFramework.MessageQueue.ZeroMQ.EventSubscriber, IFramework.MessageQueue.ZeroMQ" />-->
     <alias alias="IEventPublisher" type="IFramework.Event.IEventPublisher, IFramework" />
-    <alias alias="EventPublisher" type="IFramework.Event.Impl.MockEventPublisher, IFramework" />
+    <!--<alias alias="EventPublisher" type="IFramework.Event.Impl.MockEventPublisher, IFramework" />-->
     <alias alias="ILinearCommandManager" type="IFramework.Command.ILinearCommandManager, IFramework" />
     <alias alias="LinearCommandManager" type="Sample.Command.LinearCommandManager, Sample.Command" />
     <alias alias="ICommandBus" type="IFramework.Command.ICommandBus, IFramework" />
@@ -145,12 +145,12 @@
           </param>
         </constructor>
       </register>-->
-      <register type="IEventPublisher" mapTo="EventPublisher">
+      <!--<register type="IEventPublisher" mapTo="EventPublisher">
         <lifetime type="singleton"></lifetime>
-        <!--<constructor>
+        --><!--<constructor>
           <param name="pubEndPoint" value="tcp://127.0.0.1:5006"></param>
-        </constructor>-->
-      </register>
+        </constructor>--><!--
+      </register>-->
       <register type="IDomainEventBus" mapTo="DomainEventBus">
         <lifetime type="permessagecontext" />
         <constructor>
