add PerMessageOrExecutionContextLifetimeManager to support co-exist of message and httpcontext lifetime manager

--- a/Src/Sample/Sample.CommandService/Web.config
+++ b/Src/Sample/Sample.CommandService/Web.config
@@ -30,8 +30,8 @@
     <!--<add name="MessageStore" providerName="System.Data.SqlClient" connectionString="Server=.\sqlexpress;Database=SampleMessageStore;Integrated Security=true;" />-->
   </connectionStrings>
   <unity xmlns="http://schemas.microsoft.com/practices/2010/unity">
-    <alias alias="perexecutioncontext" type="IFramework.Infrastructure.Unity.LifetimeManagers.PerExecutionContextLifetimeManager, IFramework" />
-    <alias alias="permessagecontext" type="IFramework.Infrastructure.Unity.LifetimeManagers.PerMessageContextLifetimeManager, IFramework" />
+    <alias alias="PerMessageOrExecutionContext" type="IFramework.Infrastructure.Unity.LifetimeManagers.PerMessageOrExecutionContextLifetimeManager, IFramework" />
+    <!--<alias alias="permessagecontext" type="IFramework.Infrastructure.Unity.LifetimeManagers.PerMessageContextLifetimeManager, IFramework" />-->
     <alias alias="IMessageConsumer" type="IFramework.Message.IMessageConsumer, IFramework" />
     <!--<alias alias="EventSubscriber" type="IFramework.MessageQueue.ZeroMQ.EventSubscriber, IFramework.MessageQueue.ZeroMQ" />-->
     <alias alias="IEventPublisher" type="IFramework.Event.IEventPublisher, IFramework" />
@@ -58,7 +58,7 @@
     <alias alias="RepositoryImpl" type="IFramework.EntityFramework.Repositories.Repository`1,  IFramework.EntityFramework" />
     <container>
       <register type="IMessageStore" mapTo="SampleModelContext">
-        <lifetime type="permessagecontext"></lifetime>
+        <lifetime type="PerMessageOrExecutionContext"></lifetime>
         <!--<constructor>
           <param name="connectionString" value="SampleModelContext"></param>
         </constructor>-->
@@ -91,7 +91,7 @@
         </constructor>
       </register>-->
       <register type="IUnitOfWork" mapTo="UnitOfWork">
-        <lifetime type="permessagecontext" />
+        <lifetime type="PerMessageOrExecutionContext" />
       </register>
       <register type="ICommandHandlerProvider" mapTo="CommandHandlerProvider">
         <lifetime type="singleton" />
@@ -155,7 +155,7 @@
         </constructor>--><!--
       </register>-->
       <register type="IDomainEventBus" mapTo="DomainEventBus">
-        <lifetime type="permessagecontext" />
+        <lifetime type="PerMessageOrExecutionContext" />
         <constructor>
           <param name="provider" dependencyType="IEventSubscriberProvider" />
         </constructor>
@@ -163,7 +163,7 @@
       <register type="IFramework.Repositories.IDomainRepository, IFramework" mapTo="IFramework.EntityFramework.Repositories.DomainRepository, IFramework.EntityFramework" />
       <register type="IFramework.Repositories.IRepository`1, IFramework" mapTo="RepositoryImpl" />
       <register type="SampleModelContext" mapTo="SampleModelContext">
-        <lifetime type="permessagecontext" />
+        <lifetime type="PerMessageOrExecutionContext" />
       </register>
     </container>
   </unity>
