remove the dependency of MessageQueue.ServiceBus & ServiceBus for Unit test

--- a/Src/iFramework/IFramework.csproj
+++ b/Src/iFramework/IFramework.csproj
@@ -164,6 +164,7 @@
     <Compile Include="SysExceptions\NoHandlerExists.cs" />
     <Compile Include="UnitOfWork\BaseUnitOfWork.cs" />
     <Compile Include="UnitOfWork\IUnitOfWork.cs" />
+    <Compile Include="UnitOfWork\MockUnitOfWork.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config">
