--- a/Src/Sample.CommandHandlerTests/app.config
+++ b/Src/Sample.CommandHandlerTests/app.config
@@ -22,26 +22,13 @@
     </mvcControllers>
   </mvcConfiguration>
   <connectionStrings>
-    <!--<add name="SampleModelContext" providerName="System.Data.SqlClient" connectionString="Server=.;Database=SampleModelContext;User ID=sa;password=zhj777"/>-->
     <add name="SampleModelContext" providerName="System.Data.SqlClient" connectionString="Server=.\sqlexpress;Database=SampleModelContext;Integrated Security=true;"/>
-    <!--<add name="MessageStore" providerName="System.Data.SqlClient" connectionString="Server=.\sqlexpress;Database=SampleMessageStore;Integrated Security=true;" />-->
   </connectionStrings>
   <unity xmlns="http://schemas.microsoft.com/practices/2010/unity">
     <alias alias="PerMessageOrExecutionContext" type="IFramework.Infrastructure.Unity.LifetimeManagers.PerMessageOrExecutionContextLifetimeManager, IFramework"/>
-    <!--<alias alias="permessagecontext" type="IFramework.Infrastructure.Unity.LifetimeManagers.PerMessageContextLifetimeManager, IFramework" />-->
     <alias alias="IMessageConsumer" type="IFramework.Message.IMessageConsumer, IFramework"/>
-    <!--<alias alias="EventSubscriber" type="IFramework.MessageQueue.ZeroMQ.EventSubscriber, IFramework.MessageQueue.ZeroMQ" />-->
     <alias alias="IEventPublisher" type="IFramework.Event.IEventPublisher, IFramework"/>
     <alias alias="EventPublisher" type="IFramework.Event.Impl.MockEventPublisher, IFramework"/>
-    <alias alias="ILinearCommandManager" type="IFramework.Command.ILinearCommandManager, IFramework"/>
-    <alias alias="LinearCommandManager" type="Sample.Command.LinearCommandManager, Sample.Command"/>
-    <alias alias="ICommandBus" type="IFramework.Command.ICommandBus, IFramework"/>
-    <alias alias="CommandBus" type="IFramework.MessageQueue.ServiceBus.CommandBus, IFramework.MessageQueue.ServiceBus"/>
-    <!--<alias alias="DistributableCommandBus" type="IFramework.MessageQueue.ZeroMQ.DistributableCommandBus, IFramework.MessageQueue.ZeroMQ" />-->
-    <!--<alias alias="IMessageDistributor" type="IFramework.Message.IMessageDistributor, IFramework"/>
-    <alias alias="CommandDistributor" type="IFramework.MessageQueue.ZeroMQ.CommandDistributor, IFramework.MessageQueue.ZeroMQ"/>-->
-    <alias alias="ICommandHandlerProvider" type="IFramework.Command.ICommandHandlerProvider, IFramework"/>
-    <alias alias="CommandHandlerProvider" type="IFramework.Command.Impl.CommandHandlerProvider, IFramework"/>
     <alias alias="IHandlerProvider" type="IFramework.Message.IHandlerProvider, IFramework"/>
     <alias alias="IEventSubscriberProvider" type="IFramework.Event.IEventSubscriberProvider, IFramework"/>
     <alias alias="EventSubscriberProvider" type="IFramework.Event.Impl.EventSubscriberProvider, IFramework"/>
@@ -50,49 +37,17 @@
     <alias alias="IDomainEventBus" type="IFramework.Event.IDomainEventBus, IFramework"/>
     <alias alias="DomainEventBus" type="IFramework.Event.Impl.DomainEventBus, IFramework"/>
     <alias alias="IMessageStore" type="IFramework.Message.IMessageStore, IFramework"/>
-    <alias alias="MessageStore" type="IFramework.EntityFramework.MessageStoring.MessageStore, IFramework.EntityFramework"/>
+    <alias alias="MessageStore" type="IFramework.Message.Impl.MockMessageStore, IFramework"/>
     <alias alias="SampleModelContext" type="Sample.Persistence.SampleModelContext, Sample.Persistence"/>
     <alias alias="RepositoryImpl" type="IFramework.EntityFramework.Repositories.Repository`1,  IFramework.EntityFramework"/>
     <container>
       <register type="IMessageStore" mapTo="SampleModelContext">
         <lifetime type="PerMessageOrExecutionContext"></lifetime>
-        <!--<constructor>
-          <param name="connectionString" value="SampleModelContext"></param>
-        </constructor>-->
       </register>
-      <register type="ILinearCommandManager" mapTo="LinearCommandManager">
-        <lifetime type="singleton"/>
-      </register>
-      <!--<register type="ICommandBus" mapTo="CommandBus">
-        <lifetime type="singleton" />
-        <constructor>
-          <param name="handlerProvider" dependencyType="CommandHandlerProvider" />
-          <param name="linearCommandManager" dependencyType="LinearCommandManager" />
-          <param name="receiveEndPoint" value="inproc://commandBus" />
-          <param name="inProc" value="true" />
-          <param name="targetEndPoints">
-            <array>
-              <value value="tcp://127.0.0.1:5000" />
-            </array>
-          </param>
-        </constructor>
-      </register>-->
-      <!--<register type="ICommandBus" mapTo="DistributableCommandBus">
-        <lifetime type="singleton" />
-        <constructor>
-          <param name="handlerProvider" dependencyType="CommandHandlerProvider" />
-          <param name="linearCommandManager" dependencyType="LinearCommandManager" />
-          <param name="commandConsumer" dependencyName="CommandDistributor"></param>
-          <param name="receiveEndPoint" value="inproc://commandBus" />
-          <param name="inProc" value="true" />
-        </constructor>
-      </register>-->
       <register type="IUnitOfWork" mapTo="UnitOfWork">
         <lifetime type="PerMessageOrExecutionContext"/>
       </register>
-      <register type="ICommandHandlerProvider" mapTo="CommandHandlerProvider">
-        <lifetime type="singleton"/>
-      </register>
+
       <register type="IEventSubscriberProvider" mapTo="EventSubscriberProvider">
         <lifetime type="singleton"/>
         <constructor>
@@ -103,53 +58,8 @@
           </param>
         </constructor>
       </register>
-      <register name="AsyncDomainEventProvider" type="IHandlerProvider" mapTo="EventSubscriberProvider">
-        <lifetime type="singleton"/>
-        <constructor>
-          <param name="assemblies">
-            <array>
-              <value value="AsyncDomainEventSubscriber"/>
-            </array>
-          </param>
-        </constructor>
-      </register>
-      <!-- <register name="DomainEventConsumer" type="IMessageConsumer" mapTo="EventSubscriber">
-        <lifetime type="singleton" />
-        <constructor>
-          <param dependencyName="AsyncDomainEventProvider" name="handlerProvider" />
-          <param name="subEndPoints">
-            <array>
-              <value value="tcp://127.0.0.1:5006" />
-            </array>
-          </param>
-        </constructor>
-      </register>  
-      <register name="ApplicationEventProvider" type="IHandlerProvider" mapTo="EventSubscriberProvider">
-        <lifetime type="singleton" />
-        <constructor>
-          <param name="assemblies">
-            <array>
-              <value value="ApplicationEventSubscriber" />
-            </array>
-          </param>
-        </constructor>
-      </register>
-      <register name="ApplicationEventConsumer" type="IMessageConsumer" mapTo="EventSubscriber">
-        <lifetime type="singleton" />
-        <constructor>
-          <param dependencyName="ApplicationEventProvider" name="handlerProvider" />
-          <param name="subEndPoints">
-            <array>
-              <value value="tcp://127.0.0.1:5006" />
-            </array>
-          </param>
-        </constructor>
-      </register>-->
       <register type="IEventPublisher" mapTo="EventPublisher">
         <lifetime type="singleton"></lifetime>
-        <!--<constructor>
-          <param name="pubEndPoint" value="tcp://127.0.0.1:5006"></param>
-        </constructor>-->
       </register>
       <register type="IDomainEventBus" mapTo="DomainEventBus">
         <lifetime type="PerMessageOrExecutionContext"/>
@@ -165,91 +75,63 @@
     </container>
   </unity>
   <appSettings>
-    <!-- Service Bus specific app setings for messaging connections -->
-      <add key="webpages:Version" value="2.0.0.0"/>
-      <add key="webpages:Enabled" value="false"/>
-      <add key="PreserveLoginUrl" value="true"/>
-      <add key="ClientValidationEnabled" value="true"/>
-      <add key="UnobtrusiveJavaScriptEnabled" value="true"/>
-      <add key="CommandTypeTemplate" value="Sample.Command.{0}, Sample.Command"/>
-      <add key="PersistanceMessage" value="true"/>
-      <add key="Microsoft.ServiceBus.ConnectionString" value="Endpoint=sb://[your namespace].servicebus.windows.net;SharedSecretIssuer=owner;SharedSecretValue=[your secret]"/>
-      </appSettings>
 
-      <system.serviceModel>
-        <extensions>
-          <!-- In this extension section we are introducing all known service bus extensions. User can remove the ones they don't need. -->
-          <behaviorExtensions>
-            <add name="connectionStatusBehavior" type="Microsoft.ServiceBus.Configuration.ConnectionStatusElement, Microsoft.ServiceBus, Culture=neutral, PublicKeyToken=31bf3856ad364e35"/>
-            <add name="transportClientEndpointBehavior" type="Microsoft.ServiceBus.Configuration.TransportClientEndpointBehaviorElement, Microsoft.ServiceBus, Culture=neutral, PublicKeyToken=31bf3856ad364e35"/>
-            <add name="serviceRegistrySettings" type="Microsoft.ServiceBus.Configuration.ServiceRegistrySettingsElement, Microsoft.ServiceBus, Culture=neutral, PublicKeyToken=31bf3856ad364e35"/>
-          </behaviorExtensions>
-          <bindingElementExtensions>
-            <add name="netMessagingTransport" type="Microsoft.ServiceBus.Messaging.Configuration.NetMessagingTransportExtensionElement, Microsoft.ServiceBus,  Culture=neutral, PublicKeyToken=31bf3856ad364e35"/>
-            <add name="tcpRelayTransport" type="Microsoft.ServiceBus.Configuration.TcpRelayTransportElement, Microsoft.ServiceBus, Culture=neutral, PublicKeyToken=31bf3856ad364e35"/>
-            <add name="httpRelayTransport" type="Microsoft.ServiceBus.Configuration.HttpRelayTransportElement, Microsoft.ServiceBus, Culture=neutral, PublicKeyToken=31bf3856ad364e35"/>
-            <add name="httpsRelayTransport" type="Microsoft.ServiceBus.Configuration.HttpsRelayTransportElement, Microsoft.ServiceBus, Culture=neutral, PublicKeyToken=31bf3856ad364e35"/>
-            <add name="onewayRelayTransport" type="Microsoft.ServiceBus.Configuration.RelayedOnewayTransportElement, Microsoft.ServiceBus, Culture=neutral, PublicKeyToken=31bf3856ad364e35"/>
-          </bindingElementExtensions>
-          <bindingExtensions>
-            <add name="basicHttpRelayBinding" type="Microsoft.ServiceBus.Configuration.BasicHttpRelayBindingCollectionElement, Microsoft.ServiceBus, Culture=neutral, PublicKeyToken=31bf3856ad364e35"/>
-            <add name="webHttpRelayBinding" type="Microsoft.ServiceBus.Configuration.WebHttpRelayBindingCollectionElement, Microsoft.ServiceBus, Culture=neutral, PublicKeyToken=31bf3856ad364e35"/>
-            <add name="ws2007HttpRelayBinding" type="Microsoft.ServiceBus.Configuration.WS2007HttpRelayBindingCollectionElement, Microsoft.ServiceBus, Culture=neutral, PublicKeyToken=31bf3856ad364e35"/>
-            <add name="netTcpRelayBinding" type="Microsoft.ServiceBus.Configuration.NetTcpRelayBindingCollectionElement, Microsoft.ServiceBus, Culture=neutral, PublicKeyToken=31bf3856ad364e35"/>
-            <add name="netOnewayRelayBinding" type="Microsoft.ServiceBus.Configuration.NetOnewayRelayBindingCollectionElement, Microsoft.ServiceBus, Culture=neutral, PublicKeyToken=31bf3856ad364e35"/>
-            <add name="netEventRelayBinding" type="Microsoft.ServiceBus.Configuration.NetEventRelayBindingCollectionElement, Microsoft.ServiceBus, Culture=neutral, PublicKeyToken=31bf3856ad364e35"/>
-            <add name="netMessagingBinding" type="Microsoft.ServiceBus.Messaging.Configuration.NetMessagingBindingCollectionElement, Microsoft.ServiceBus, Culture=neutral, PublicKeyToken=31bf3856ad364e35"/>
-          </bindingExtensions>
-        </extensions>
-      </system.serviceModel>
-      <runtime>
-        <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
-          <dependentAssembly>
-            <assemblyIdentity name="System.Web.Helpers" publicKeyToken="31bf3856ad364e35"/>
-            <bindingRedirect oldVersion="1.0.0.0-2.0.0.0" newVersion="2.0.0.0"/>
-          </dependentAssembly>
-          <dependentAssembly>
-            <assemblyIdentity name="System.Web.Mvc" publicKeyToken="31bf3856ad364e35"/>
-            <bindingRedirect oldVersion="1.0.0.0-4.0.0.0" newVersion="4.0.0.0"/>
-          </dependentAssembly>
-          <dependentAssembly>
-            <assemblyIdentity name="System.Web.WebPages" publicKeyToken="31bf3856ad364e35"/>
-            <bindingRedirect oldVersion="1.0.0.0-2.0.0.0" newVersion="2.0.0.0"/>
-          </dependentAssembly>
-          <dependentAssembly>
-            <assemblyIdentity name="WebGrease" publicKeyToken="31bf3856ad364e35"/>
-            <bindingRedirect oldVersion="0.0.0.0-1.3.0.0" newVersion="1.3.0.0"/>
-          </dependentAssembly>
-          <dependentAssembly>
-            <assemblyIdentity name="EntityFramework" publicKeyToken="b77a5c561934e089" culture="neutral"/>
-            <bindingRedirect oldVersion="0.0.0.0-6.0.0.0" newVersion="6.0.0.0"/>
-          </dependentAssembly>
-          <dependentAssembly>
-            <assemblyIdentity name="Microsoft.Data.OData" publicKeyToken="31bf3856ad364e35" culture="neutral"/>
-            <bindingRedirect oldVersion="0.0.0.0-5.6.0.0" newVersion="5.6.0.0"/>
-          </dependentAssembly>
-          <dependentAssembly>
-            <assemblyIdentity name="Microsoft.Data.Edm" publicKeyToken="31bf3856ad364e35" culture="neutral"/>
-            <bindingRedirect oldVersion="0.0.0.0-5.6.0.0" newVersion="5.6.0.0"/>
-          </dependentAssembly>
-          <dependentAssembly>
-            <assemblyIdentity name="System.Spatial" publicKeyToken="31bf3856ad364e35" culture="neutral"/>
-            <bindingRedirect oldVersion="0.0.0.0-5.6.0.0" newVersion="5.6.0.0"/>
-          </dependentAssembly>
-          <dependentAssembly>
-            <assemblyIdentity name="Newtonsoft.Json" publicKeyToken="30ad4fe6b2a6aeed" culture="neutral"/>
-            <bindingRedirect oldVersion="0.0.0.0-6.0.0.0" newVersion="6.0.0.0"/>
-          </dependentAssembly>
-        </assemblyBinding>
-      </runtime>
-      <entityFramework>
-        <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
-          <parameters>
-            <parameter value="v11.0"/>
-          </parameters>
-        </defaultConnectionFactory>
-        <providers>
-          <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer"/>
-        </providers>
-      </entityFramework>
-    <startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0"/></startup></configuration>
+  </appSettings>
+
+  <system.serviceModel>
+
+  </system.serviceModel>
+  <runtime>
+    <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
+      <dependentAssembly>
+        <assemblyIdentity name="System.Web.Helpers" publicKeyToken="31bf3856ad364e35"/>
+        <bindingRedirect oldVersion="1.0.0.0-2.0.0.0" newVersion="2.0.0.0"/>
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="System.Web.Mvc" publicKeyToken="31bf3856ad364e35"/>
+        <bindingRedirect oldVersion="1.0.0.0-4.0.0.0" newVersion="4.0.0.0"/>
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="System.Web.WebPages" publicKeyToken="31bf3856ad364e35"/>
+        <bindingRedirect oldVersion="1.0.0.0-2.0.0.0" newVersion="2.0.0.0"/>
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="WebGrease" publicKeyToken="31bf3856ad364e35"/>
+        <bindingRedirect oldVersion="0.0.0.0-1.3.0.0" newVersion="1.3.0.0"/>
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="EntityFramework" publicKeyToken="b77a5c561934e089" culture="neutral"/>
+        <bindingRedirect oldVersion="0.0.0.0-6.0.0.0" newVersion="6.0.0.0"/>
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="Microsoft.Data.OData" publicKeyToken="31bf3856ad364e35" culture="neutral"/>
+        <bindingRedirect oldVersion="0.0.0.0-5.6.0.0" newVersion="5.6.0.0"/>
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="Microsoft.Data.Edm" publicKeyToken="31bf3856ad364e35" culture="neutral"/>
+        <bindingRedirect oldVersion="0.0.0.0-5.6.0.0" newVersion="5.6.0.0"/>
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="System.Spatial" publicKeyToken="31bf3856ad364e35" culture="neutral"/>
+        <bindingRedirect oldVersion="0.0.0.0-5.6.0.0" newVersion="5.6.0.0"/>
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="Newtonsoft.Json" publicKeyToken="30ad4fe6b2a6aeed" culture="neutral"/>
+        <bindingRedirect oldVersion="0.0.0.0-6.0.0.0" newVersion="6.0.0.0"/>
+      </dependentAssembly>
+    </assemblyBinding>
+  </runtime>
+  <entityFramework>
+    <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
+      <parameters>
+        <parameter value="v11.0"/>
+      </parameters>
+    </defaultConnectionFactory>
+    <providers>
+      <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer"/>
+    </providers>
+  </entityFramework>
+  <startup>
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0"/>
+  </startup>
+</configuration>
