add valueobject support

--- a/Src/iFramework/IFramework.csproj
+++ b/Src/iFramework/IFramework.csproj
@@ -68,6 +68,7 @@
     <Compile Include="Command\Impl\LinearCommandManager.cs" />
     <Compile Include="Domain\AggregateRoot.cs" />
     <Compile Include="Domain\AggregateRootWithIdentity.cs" />
+    <Compile Include="Domain\ValueObject.cs" />
     <Compile Include="Event\IApplicationEvent.cs" />
     <Compile Include="Event\IEvent.cs" />
     <Compile Include="Event\IEventPublisher.cs" />
