--- a/Src/Sample/Sample.DomainEvent/Sample.DomainEvents.csproj
+++ b/Src/Sample/Sample.DomainEvent/Sample.DomainEvents.csproj
@@ -40,13 +40,10 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Community\AccountRegistered.cs" />
+    <Compile Include="DomainEvent.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\iFramework.Plugins\iFramework.Infrastructure.EntityFramework\IFramework.EntityFramework.csproj">
-      <Project>{c00b8ad6-47c2-4642-877e-2c759d05dcfe}</Project>
-      <Name>IFramework.EntityFramework</Name>
-    </ProjectReference>
     <ProjectReference Include="..\..\iFramework\IFramework.csproj">
       <Project>{f3932367-d3ea-4e8a-ab12-5fb785b93a39}</Project>
       <Name>IFramework</Name>
