add cors support for mvc controller add config in web.config to enable cors for Controllers like below: <add key="AllowCorsOrigins" value="http://vip.clouds-x.com, http://www.baidu.com,http://www.google.com" />

--- a/Src/iFramework.Plugins/iFramework.Infrastructure.Mvc/IFramework.Infrastructure.Mvc.csproj
+++ b/Src/iFramework.Plugins/iFramework.Infrastructure.Mvc/IFramework.Infrastructure.Mvc.csproj
@@ -62,6 +62,7 @@
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
+    <Reference Include="System.XML" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CommandHttpClient.cs" />
@@ -70,6 +71,8 @@
     <Compile Include="Config\MvcConfigurationSection.cs" />
     <Compile Include="Config\MvcControllerCollection.cs" />
     <Compile Include="Config\MvcControllerElement.cs" />
+    <Compile Include="CorsAttribute.cs" />
+    <Compile Include="CorsMessageHandler.cs" />
     <Compile Include="DisposeObjectHttpModule.cs" />
     <Compile Include="InternalDefaultController.cs" />
     <Compile Include="IoCControllerFactory.cs" />
